Sat Oct 12 20:36:36 1996  Ian Lance Taylor  <ian@cygnus.com>

	* client.c (client_send_expansions): Add build_dirs parameter.
	Change all callers.
	(send_dirent_proc): Get build_dirs from callerdat; if it is
	zero, don't send a nonexistent directory to the server.
	(send_files): Add build_dirs parameter.  Change all callers.
	* client.h (send_files): Update prototype.
	(send_files_contents): Remove prototype for nonexistent function.
	(client_send_expansions): Update prototype.
	* sanity.sh (deep): Add deep-4b test for above patch.

Fri Oct 11 14:07:12 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	gcc -Wall lint:
	* logmsg.c (title_proc): Remove unused variables title and comma.

	* sanity.sh (modules2): Don't be picky about whether we are
	checking in 1.3 or 1.2 of modules; it depends on whether we are
	running all the tests or just some.

Thu Oct 10 14:52:06 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c, server.h (server_dir): New variable.
	(output_dir): If it is set, send it before the directory name.
	* modules.c (do_module): Set it, in the case of & modules, and
	restore it when done.
	* sanity.sh (modules): Don't clean up first-dir before starting;
	tests now clean up for themselves at the end.
	(modules2): New tests, for above fix.

Wed Oct  9 15:52:34 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* sanity.sh: Barf immediately if run as root. 

	* rcs.c (RCS_getrevtime): When giving a date to get_date, use the full
	year, not the year - 1900, so that dates after 1999 are parsed
	correctly.  (Change thanks to Paul Eggert.)

Wed Oct  9 10:59:11 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Clean up gcc -Wmissing-prototypes lint:
	* cvs.h (admin, add, checkout, commit, diff, history, import,
	cvslog, login, patch, release, cvsremove, rtag, status, tag):
	Declare.
	* server.c, main.c: Don't declare them here.  Don't declare update
	either (which is already declared in cvs.h).
	* tag.c, cvs.h, main.c, server.c: Rename tag to cvstag to avoid