@@ -1,3 +1,8 @@
+Sat Oct 12 21:41:46 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* sanity.sh (deep): Add comment about whether the deep-4b behavior
+	is considered desirable.
+
 Sat Oct 12 20:36:36 1996  Ian Lance Taylor  <ian@cygnus.com>
 
 	* client.c (client_send_expansions): Add build_dirs parameter.
